@@ -1,5 +1,10 @@
 2010-02-02  Lluis Sanchez Gual  <lluis@novell.com>
 
+	* Mono.Debugging.Evaluation/NRefactoryResolverVisitor.cs:
+	  Properly resolve type references.
+
+2010-02-02  Lluis Sanchez Gual  <lluis@novell.com>
+
 	* Mono.Debugging.Evaluation/ObjectValueAdaptor.cs: Fix type
 	  arg count code.
 
